# bot_neo

./: README.md  build.gradle.kts  metadata.json
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/: BotService.kt  MainActivity.kt  NodeBridge.kt  SessionManager.kt  SetupActivity.kt  WatchdogManager.kt
app/src/main/res/drawable/: circle_green.xml  ic_launcher_foreground.xml
app/src/main/res/layout/: activity_main.xml  activity_setup.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
assets/nodejs-project/: index.js  package.json
